--- a/_bibliography/presentations.bib
+++ b/_bibliography/presentations.bib
@@ -1,26 +1,26 @@
 ---
 ---
 
-@article{einstein1950meaning,
+@article{idontknow1,
   abbr={AJP},
   tag={test},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
+  title={abc},
+  author={x, y and z, AH},
+  journal={American Journal of,},
   volume={18},
   number={6},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  url={http://link.aps.org/doi/10.1103/PhysRev.},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.},
   pdf={example.pdf},
   pages={403--404},
   year={1950},
-  publisher={American Association of Physics Teachers,}
+  publisher={American Association of ,}
 }
 
 @article{PhysRev.47.777,
   abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
+  title={>>},
+  author={>},
   journal={Phys. Rev.,},
   volume={47},
   issue={10},
@@ -29,28 +29,28 @@
   year={1935},
   month={May},
   publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  doi={10.1103/PhysRev.},
+  url={http://link.aps.org/doi/10.1103/PhysRev.},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.},
   pdf={example.pdf},
   selected={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
+@article{idontknow4,
+  title={?},
+  author={?, A.},
+  journal={?,},
   volume={322},
   number={8},
   pages={549--560},
   year={1905},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  url={http://link.aps.org/doi/10.1103/PhysRev.},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.},
   pdf={example.pdf},
-  publisher={Wiley Online Library}
+  publisher={Wiley Online }
 }
 
-@article{einstein1905movement,
+@article{idontknow3,
   abbr={Ann. Phys.},
   title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
   author={Einstein, A.},
@@ -63,7 +63,7 @@
   year={1905}
 }
 
-@article{einstein1905electrodynamics,
+@article{idontknow12,
   title={On the electrodynamics of moving bodies},
   author={Einstein, A.},
   year={1905},
