--- a/_bibliography/presentations.bib
+++ b/_bibliography/presentations.bib
@@ -17,57 +17,24 @@
   publisher={American Association of ,}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={>>},
-  author={>},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.},
-  url={http://link.aps.org/doi/10.1103/PhysRev.},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.},
-  pdf={example.pdf},
-  selected={true}
-}
-
-@article{idontknow4,
-  title={?},
-  author={?, A.},
-  journal={?,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  url={http://link.aps.org/doi/10.1103/PhysRev.},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.},
-  pdf={example.pdf},
-  publisher={Wiley Online }
-}
-
 @article{idontknow3,
   abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
+  title={idontkow},
+  author={pqe, A.},
+  journal={rty. Phys.,},
   volume={17},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  url={http://link.aps.org/doi/10.1103/PhysRev.8},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.7},
   pdf={example.pdf},
   pages={549--560},
   year={1905}
 }
 
 @article{idontknow12,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
+  title={who knows},
+  author={abc, A.},
   year={1905},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  url={http://link.aps.org/doi/10.1103/PhysRev.7},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.7},
   pdf={example.pdf}
 }
